# lambda-sftp

./: .pytest.ini  README.md  lambda_function.py  pyproject.toml
tests/: common.py  test_lambda_function.py
tests/resources/: id_testkey  id_testkey.pub  sftpserver.pub
