[project]
name = "lambda-sftp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ryan gibbons", email = "ryan.david.gibbons@gmail.com"},
]
dependencies = [
    "sftpretty>=1.1.4",
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
    "pytest-sftpserver>=1.3.0",
    "boto3>=1.34.84",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
